--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "upwork-jobs-feed-tracker",
+  "name": "freelancer-jobs-feed-tracker",
   "version": "1.2.2",
-  "description": "upwork jobs feed tracker",
+  "description": "freelancer jobs feed tracker",
   "main": "main.js",
   "scripts": {
     "build": "rm -rf ./public; webpack",
